# Vasya-welldone

./: README.md
locacoca/: CMakeLists.txt  functors.h  main.cu  pyplot.cpp  pyplot.h  simpleCUFFT.cu
locacoca/inc/: convolutionSeparable.cu
